@@ -201,6 +201,11 @@ class ScenarioRiskTestCase(CalculatorTestCase):
         # a complex scenario_risk from GMFs where the hazard sites are
         # not in the asset locations
         self.run_calc(case_8.__file__, 'job.ini')
+
+        # the gmf_data exported failed in the past, since this is a
+        # tricky case with filtered sitecol and autogenerated custom_site_id
+        export(('gmf_data', 'csv'), self.calc.datastore)
+        
         [_tot, fname] = export(('aggrisk', 'csv'), self.calc.datastore)
         self.assertEqualFiles('expected/agglosses.csv', fname)
 
