@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed the gmf_data exporter with a filtered site collection
   * Fixed the naming convention on source IDs
   * Added missing validation on duplicate source IDs for source models
     in format nrml/0.5
